<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorSecondaryContainer">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/top_appbar"
            app:title="@string/direct_in_whatsapp" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:minHeight="600dp"
        android:orientation="vertical"
        android:paddingTop="20dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextNumberBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:hint="@string/number"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:errorEnabled="true"
            app:helperText="Enter Valid Mobile Number">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextNumber"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:textSize="25sp"
                android:gravity="center"
                android:maxLength="10"
                android:inputType="number"
                android:textColorHint="#546E7A" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextMessageBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="8dp"
            android:hint="@string/message"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:helperText="Write Message (Optional)"
            app:helperTextEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextMessage"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:textColorHint="#546E7A" />

        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center|top"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:paddingTop="20dp">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|top"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <Button
                    android:id="@+id/buttonSMS"
                    style="?attr/materialIconButtonFilledStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/send"
                    android:text="@string/sms"
                    app:icon="@drawable/sms_23"
                    tools:ignore="DuplicateSpeakableTextCheck" />

                <Button
                    android:id="@+id/scanner"
                    style="?attr/materialIconButtonFilledTonalStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:contentDescription="@string/app_name"
                    app:icon="@drawable/qrcode_24"/>

                <Button
                    android:id="@+id/buttonSendToWhats"
                    style="?attr/materialIconButtonFilledStyle"

                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/send"
                    android:text="@string/send_to_whats"
                    app:icon="@drawable/send" />
            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/bannerAdContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:cardCornerRadius="0dp" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>